--- a/TF-PrograWeb-PetHarem/src/main/resources/templates/inicio.html
+++ b/TF-PrograWeb-PetHarem/src/main/resources/templates/inicio.html
@@ -32,7 +32,7 @@
 		   		border-radius: 0px;
 			}
 			.jumbotron {
-  				background-image: url("https://images.unsplash.com/photo-1508020963102-c6c723be5764?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80");
+  				background-image: url("https://scontent.flim25-1.fna.fbcdn.net/v/t39.30808-6/250079790_4868656176499274_8231232328085131710_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_ohc=grIHkPVK3lIAX-e0GjX&_nc_ht=scontent.flim25-1.fna&oh=5f20272ece946bd97eaea42d94ff18ce&oe=6180AE1D");
  				background-position: center;
   				background-repeat: no-repeat;
   				background-size: cover;
