--- a/ProyectoConAgregado/TF-PrograWeb-PetHarem/src/main/resources/templates/login.html
+++ b/ProyectoConAgregado/TF-PrograWeb-PetHarem/src/main/resources/templates/login.html
@@ -4,6 +4,18 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
+<style>
+			.navbar {
+		   		border-radius: 0px;
+			}
+			.jumbotron {
+  				background-image: url("https://scontent.flim25-1.fna.fbcdn.net/v/t39.30808-6/250079790_4868656176499274_8231232328085131710_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_ohc=grIHkPVK3lIAX-e0GjX&_nc_ht=scontent.flim25-1.fna&oh=5f20272ece946bd97eaea42d94ff18ce&oe=6180AE1D");
+ 				background-position: center;
+  				background-repeat: no-repeat;
+  				background-size: cover;
+  				height: 350px;}
+		</style>
+<div th:replace="fragments/header2 :: header"></div>
     	<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
@@ -13,7 +25,7 @@
 								<a href="#" class="active" id="login-form-link">Login</a>
 							</div>
 							<div class="col-xs-6">
-								<a href="#" id="register-form-link">Register</a>
+								<a href="inicio2.html" id="register-form-link">Registrarse</a>
 							</div>
 						</div>
 						<hr>
@@ -30,7 +42,7 @@
 									</div>
 									<div class="form-group text-center">
 										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Remember Me</label>
+										<label for="remember"> Recordarme</label>
 									</div>
 									<div class="form-group">
 										<div class="row">
@@ -43,7 +55,7 @@
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="text-center">
-													<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+													<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Olvidaste Contrasenia?</a>
 												</div>
 											</div>
 										</div>
@@ -76,7 +88,7 @@
 				</div>
 			</div>
 		</div>
-		<style type="text/css"> 
+		<style> 
 		
 		body {
     padding-top: 90px;
@@ -177,5 +189,6 @@
 	background-color: #1CA347;
 	border-color: #1CA347;
 }
-</style>
+		
+		</style>
 	</div>
