--- a/ProyectoConAgregado/TF-PrograWeb-PetHarem/src/main/resources/templates/fragments/header.html
+++ b/ProyectoConAgregado/TF-PrograWeb-PetHarem/src/main/resources/templates/fragments/header.html
@@ -34,6 +34,9 @@
 							<li class="active"><a th:href="@{/inicio}">Inicio</a></li>
 							<li class="active"><a th:href="@{/nosotros}">Nosotros</a></li>
 							<li class="active"><a th:href="@{/contactanos}">Contáctanos</a></li>
+							<li class="active"><a th:href="@{/raza/listar}">Raza</a></li>
+							<li class="active"><a th:href="@{/mascota/listar}">Mascota</a></li>
+							<li class="active"><a th:href="@{/duenio/listar}">Dueño</a></li>
 							<li class="active"><a th:href="@{/login}">Iniciar Sesión</a></li>
 	
 						</ul>
